--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,6 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
 			<version>${spring.framework.version}</version>
-			<scope>compile</scope>
 		</dependency>
 		
 		<dependency>
@@ -169,7 +168,12 @@
 			</exclusion>
 			</exclusions>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>4.3.1.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
