--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <log4j.version>2.0.2</log4j.version>
-        <spring.framework.version>4.1.6.RELEASE</spring.framework.version>
+        <spring.framework.version>4.2.3.RELEASE</spring.framework.version>
     </properties>
 
 	<dependencies>
@@ -102,38 +102,18 @@
 			<version>3.18.1-GA</version>
 			<scope>runtime</scope>
 		</dependency>
-				
+		
 		<dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>javax.persistence</artifactId>
-			<version>2.1.0</version>
-			<scope>compile</scope>
+			<groupId>org.hibernate.javax.persistence</groupId>
+			<artifactId>hibernate-jpa-2.1-api</artifactId>
+			<version>1.0.0.Final</version>
 		</dependency>
+		
 		
 		<dependency>
 			<groupId>javax.transaction</groupId>
 			<artifactId>javax.transaction-api</artifactId>
 			<version>1.2</version>
-			<scope>compile</scope>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-jpa</artifactId>
-			<version>1.5.0.RELEASE</version>
-			<scope>compile</scope>
-			<exclusions>
-			<exclusion>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jcl-over-slf4j</artifactId>
-			</exclusion>
-			</exclusions>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-search-orm</artifactId>
-			<version>4.5.0.Final</version>
 			<scope>compile</scope>
 		</dependency>
 		
@@ -147,7 +127,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>4.3.1.Final</version>
+			<version>5.1.0.Final</version>
 			<scope>runtime</scope>
 			<exclusions>
 			<exclusion>
@@ -172,10 +152,10 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>4.3.1.Final</version>
+			<version>5.1.0.Final</version>
 		</dependency>
+		
 	</dependencies>
-
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
